NIFI-14115 Set Standard HTTP Headers for Framework Responses
- Added HeaderWriterHandler implementing Jetty Handler methods for setting standard HTTP response headers
- Removed HeaderWriterFilter approach for writing standard HTTP headers
- Refactored Jetty Server instantiation to StandardServerProvider for streamlined configuration and testing