@@ -22,7 +22,6 @@ import org.apache.nifi.web.server.log.RequestAuthenticationFilter;
 import org.eclipse.jetty.ee10.servlet.FilterHolder;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.security.web.header.HeaderWriterFilter;
 
 import jakarta.servlet.Filter;
 import java.util.Collections;
@@ -81,7 +80,7 @@ public class StandardRequestFilterProviderTest {
 
         assertFilterClassFound(filters, RequestAuthenticationFilter.class);
 
-        final FilterHolder firstFilterHolder = filters.get(0);
+        final FilterHolder firstFilterHolder = filters.getFirst();
         final Class<? extends Filter> firstFilterClass = firstFilterHolder.getHeldClass();
         assertEquals(RequestAuthenticationFilter.class, firstFilterClass);
     }
@@ -90,7 +89,6 @@ public class StandardRequestFilterProviderTest {
         assertNotNull(filters);
         assertFalse(filters.isEmpty());
 
-        assertFilterClassFound(filters, HeaderWriterFilter.class);
         assertFilterClassFound(filters, DataTransferExcludedDoSFilter.class);
     }
 
